--- a/public/activity/css/activity.css
+++ b/public/activity/css/activity.css
@@ -13,7 +13,7 @@ body{
     width: 100%;
     height: 100%;
     background: url("../img/beijing.png") no-repeat;
-    background-size: contain;
+    background-size: cover;
     display: flex;
     flex: 1;
 }
@@ -30,22 +30,24 @@ nav{
     height:100%;
 }
 #activity_data,#activity_datas{
-    padding-left: 1.6rem;
+    padding-left: 1.5rem;
     line-height: 1rem;
-    font-size: .35rem;
+    font-size: .3rem;
     line-height: .8rem;
     margin: auto;
+    display: inline-block;
 }
 #activity_datas{
-    padding-left: 3rem;
+    padding-left: 2.4rem;
     font-size: .5rem;
 }
+
 /*弹框*/
 #ball_box,#ball_boxs{
-    width: 100%;
+    /*width: 100%;*/
     height: 7.2rem;
     margin: auto;
-    margin-left: .5rem;
+    margin-left: .8rem;
     background: url("../img/tanchuang.png") no-repeat;
     background-size: 90% 100%;
     margin-top: 1rem;
@@ -53,32 +55,36 @@ nav{
 
 #ball_boxs{
     position: fixed;
-    top:4.65rem;
-    left: -.2rem;
+    top:4.05rem;
+    /*left: -.2rem;*/
 }
 #activity_content,#activity_contents{
     width:75%;
-    font-size:.4rem;
+    font-size:.38rem;
     font-family:DengXian-Regular;
     color:rgba(51,51,51,1);
     margin-left: .7rem;
-    margin-top: .2rem;
+    margin-top: .4rem;
     letter-spacing: .1rem;
-    margin-bottom:1rem;
+    margin-bottom:.8rem;
 }
 #activity_contents{
     margin-top: .5rem;
 }
-#share_btn,#share_btns{
+.share_btn,.share_btns{
     font-size: .5rem;
     color: rgba(51,51,51,1);
-    padding-left: 3.4rem;
+    padding-left: 1.2rem;
     margin: auto;
     display: inline-block;
 }
-#share_btns{
+.share_btns{
     font-size: .5rem;
-    margin-top: .2rem;
+    margin-top: -.1rem;
+}
+.share_btn img,.share_btns img{
+    width: 6rem;
+    margin-top: -.3rem;
 }
 #mengcheng{
     width: 100%;
@@ -96,6 +102,7 @@ nav{
     margin: auto;
     margin-left: 3rem;
     margin-top: 1.4rem;
+    display: inline-block;
 }
 .footer_nav{
     width: 20%;
@@ -118,7 +125,6 @@ a{
 }
 /*海报*/
 #haibao{
-
     background: url("../img/shengchenghaibao.jpg") no-repeat;
     background-size: contain;
     display: none;
