--- a/public/activity/css/activity.css
+++ b/public/activity/css/activity.css
@@ -23,7 +23,7 @@ body{
     display: block;
     width: 80%;
     height: 100%;
-    margin-top:1rem;
+    margin-top:.1rem;
 }
 nav{
     width: 100%;
@@ -43,49 +43,54 @@ nav{
 }
 
 /*弹框*/
-#ball_box,#ball_boxs{
-    /*width: 100%;*/
+.ball_box{
     height: 7.2rem;
     margin: auto;
     margin-left: .8rem;
-    background: url("../img/tanchuang.png") no-repeat;
+    background: url("../img/tanchuang1.png") no-repeat;
     background-size: 90% 100%;
-    margin-top: 1rem;
+    margin-top: 0rem;
 }
-
-#ball_boxs{
+.ball_boxs{
     position: fixed;
-    top:4.05rem;
+    top:3.8rem;
+    height: 7.2rem;
+    margin: auto;
+    margin-left: .8rem;
+    background: url("../img/qzt.png") no-repeat;
+    background-size: 90% 100%;
+    margin-top: 0rem;
+    /*background: url("../img/qzt.png") no-repeat;*/
     /*left: -.2rem;*/
 }
-#activity_content,#activity_contents{
+.activity_content,.activity_contents{
     width:75%;
     font-size:.38rem;
     font-family:DengXian-Regular;
     color:rgba(51,51,51,1);
     margin-left: .7rem;
-    margin-top: .4rem;
+    padding-top: 1rem;
     letter-spacing: .1rem;
     margin-bottom:.8rem;
 }
-#activity_contents{
+.activity_contents{
     margin-top: .5rem;
 }
-.share_btn,.share_btns{
-    font-size: .5rem;
-    color: rgba(51,51,51,1);
-    padding-left: 1.2rem;
-    margin: auto;
-    display: inline-block;
-}
-.share_btns{
-    font-size: .5rem;
-    margin-top: -.1rem;
-}
-.share_btn img,.share_btns img{
-    width: 6rem;
-    margin-top: -.3rem;
-}
+/*.share_btn,.share_btns{*/
+    /*font-size: .5rem;*/
+    /*color: rgba(51,51,51,1);*/
+    /*padding-left: 1.2rem;*/
+    /*margin: auto;*/
+    /*display: inline-block;*/
+/*}*/
+/*.share_btns{*/
+    /*font-size: .5rem;*/
+    /*margin-top: -.1rem;*/
+/*}*/
+/*.share_btn img,.share_btns img{*/
+    /*width: 6rem;*/
+    /*margin-top: -.3rem;*/
+/*}*/
 #mengcheng{
     width: 100%;
     height:100%;
@@ -126,7 +131,7 @@ a{
 /*海报*/
 #haibao{
     background: url("../img/shengchenghaibao.jpg") no-repeat;
-    background-size: contain;
+    background-size: cover;
     display: none;
     width: 100%;
     height:100%;
@@ -154,6 +159,6 @@ a{
     width: .4rem;
     height: .4rem;
     position: absolute;
-    top:10.7rem;
+    top:10.2rem;
     left: 3.2rem;
 }
