--- a/public/activity/css/activity.css
+++ b/public/activity/css/activity.css
@@ -134,7 +134,7 @@ a{
     background-size: cover;
     display: none;
     width: 100%;
-    height:87%;
+    height:100%;
     position: absolute;
     z-index: 2;
 
@@ -161,4 +161,8 @@ a{
     position: absolute;
     top:9rem;
     left: 3.2rem;
+}
+.width{
+    width: 3rem;
+    height: 3rem;
 }
