--- a/public/activity/css/activity.css
+++ b/public/activity/css/activity.css
@@ -136,9 +136,11 @@ a{
     display: none;
     width: 100%;
     height:100%;
-    display: flex;
-    flex: 1;
     position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
     z-index: 2;
 
 }
