--- a/public/activity/css/activity.css
+++ b/public/activity/css/activity.css
@@ -9,13 +9,19 @@ header{
     position: fixed;
     top: -2px;
 }
-body{
+#aaa{
     width: 100%;
     height: 100%;
     background: url("../img/beijing.png") no-repeat;
     background-size: cover;
     display: flex;
     flex: 1;
+    position: relative;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    /*background: yellow;*/
 }
 #biaoyu{
     margin-top: 368px;
@@ -23,11 +29,18 @@ body{
     display: block;
     width: 80%;
     height: 100%;
-    margin-top:.1rem;
+    margin-top:1.3rem;
 }
 nav{
     width: 100%;
     height:100%;
+    /*position: absolute;*/
+    /*top: 0;*/
+    /*bottom: 0;*/
+    /*left: 0;*/
+    /*right: 0;*/
+    /*background: red;*/
+
 }
 #activity_data,#activity_datas{
     padding-left: 1.5rem;
@@ -49,7 +62,7 @@ nav{
     margin-left: .8rem;
     background: url("../img/tanchuang1.png") no-repeat;
     background-size: 90% 100%;
-    margin-top: 0rem;
+    margin-top: 1rem;
 }
 .ball_boxs{
     position: fixed;
@@ -141,7 +154,7 @@ a{
     right: 0;
     bottom: 0;
     left: 0;
-    z-index: 2;
+    z-index: 222;
 
 }
 .footer_nav img{
