--- a/public/web/css/com.css
+++ b/public/web/css/com.css
@@ -98,12 +98,13 @@ body{
 }
 .navbar-nav .pyt_searchAll{
     position: absolute;
-    top: -12px;
+    top: -6px;
     left: -48px;
     display: inline-block;
-    border-right: 1px solid #999;
+    border-right: 1px solid #ddd;
     width: 64px;
     color: #777;
+    line-height: 20px;
     font-size:14px
 }
 .navbar-form .form-group{
@@ -235,6 +236,7 @@ body{
     color: #fff;
     position: absolute;
     background: #FF5500;
+    text-align: center;
     border: 1px solid #FF5500;
 }
 .discount{
@@ -484,7 +486,7 @@ button{
 }
 .pyt_footer li{
     margin-top: 22px;
-    margin-bottom: 4px;
+    margin-bottom: 16px;
     font-size: 12px;
     color: rgba(153, 153, 153, 1);
     width: 140px;
