--- a/public/web/css/detail.css
+++ b/public/web/css/detail.css
@@ -84,6 +84,7 @@ body{
     background: #fff;
     width: 100%;
     height: 520px;
+    margin-top: 20px;
 }
 .template_header{
     margin-top: 10px;
@@ -91,6 +92,12 @@ body{
     border-bottom: 1px solid #eee;
     padding-bottom: 10px;
     float: left;
+}
+.pro_list .single:nth-child(5n){
+    margin-right: 20px;
+}
+.pro_list .single:nth-child(5n+1){
+    margin-right: 0px;
 }
 .template_header .template_header_left{
     display: inline-block;
@@ -107,12 +114,15 @@ body{
 }
 .template_banner .template_QQ{
     margin-top: 10px;
-    margin-right: 10px;
+    margin-right: 6px;
     display: inline-block;
     width: 48%;
     height:460px ;
     border: 1px solid #eee;
     position: relative;
+}
+.template_banner .template_QQ:first-child{
+    margin-left: 6px;
 }
 .template_banner .template_wx{
     float: right;
@@ -161,7 +171,7 @@ body{
     bottom: 1px;
 }
 .wx_creat{
-    width: 100%;
+    width: 50%;
     height: 40px;
     color: #fff;
     display: inline-block;
@@ -170,12 +180,21 @@ body{
     background: #2CC21B;
     position: absolute;
     bottom: 1px;
-    right: 0px;
+    left: 0px;
 }
 .long_pic{
     background:#2ABA1A;
-    float: right;
-    margin-right: -34px;
+    width: 50%;
+    height: 40px;
+    color: #fff;
+    display: inline-block;
+    line-height: 40px;
+    text-align: center;
+    background:rgba(42, 186, 26, 1);
+    position: absolute;
+    bottom: 1px;
+    right: 0px;
+    /*margin-right: -34px;*/
 }
 /*微信*/
 .wx_pic_box img{
@@ -278,9 +297,10 @@ body{
     margin-top: 20px;
     margin-right: 8px;
 }
-#area-right img{
+#area-right #code{
     width: 100%;
     height: 100%;
+    margin-left: 8px;
 }
 #area-right p{
     margin-top: 8px;
