--- a/public/activity/css/activity.css
+++ b/public/activity/css/activity.css
@@ -65,7 +65,7 @@ nav{
     margin-top: 1rem;
 }
 .ball_boxs{
-    position: fixed;
+    position: absolute;
     top:3.8rem;
     height: 7.2rem;
     margin: auto;
@@ -108,7 +108,7 @@ nav{
     width: 100%;
     height:100%;
     background-color: rgba(0,0,0,.4);
-    position: fixed;
+    position: absolute;
     z-index: 2;
     display: none;
 }
