--- a/public/activity/css/activity.css
+++ b/public/activity/css/activity.css
@@ -21,7 +21,6 @@ header{
     bottom: 0;
     left: 0;
     right: 0;
-    /*background: yellow;*/
 }
 #biaoyu{
     margin-top: 368px;
@@ -34,13 +33,6 @@ header{
 nav{
     width: 100%;
     height:100%;
-    /*position: absolute;*/
-    /*top: 0;*/
-    /*bottom: 0;*/
-    /*left: 0;*/
-    /*right: 0;*/
-    /*background: red;*/
-
 }
 #activity_data,#activity_datas{
     padding-left: 1.5rem;
@@ -54,7 +46,6 @@ nav{
     padding-left: 2.4rem;
     font-size: .5rem;
 }
-
 /*弹框*/
 .ball_box{
     height: 7.2rem;
@@ -73,8 +64,6 @@ nav{
     background: url("../img/qzt.png") no-repeat;
     background-size: 90% 100%;
     margin-top: 0rem;
-    /*background: url("../img/qzt.png") no-repeat;*/
-    /*left: -.2rem;*/
 }
 .activity_content,.activity_contents{
     width:75%;
@@ -89,27 +78,16 @@ nav{
 .activity_contents{
     margin-top: .5rem;
 }
-/*.share_btn,.share_btns{*/
-    /*font-size: .5rem;*/
-    /*color: rgba(51,51,51,1);*/
-    /*padding-left: 1.2rem;*/
-    /*margin: auto;*/
-    /*display: inline-block;*/
-/*}*/
-/*.share_btns{*/
-    /*font-size: .5rem;*/
-    /*margin-top: -.1rem;*/
-/*}*/
-/*.share_btn img,.share_btns img{*/
-    /*width: 6rem;*/
-    /*margin-top: -.3rem;*/
-/*}*/
 #mengcheng{
     width: 100%;
     height:100%;
     background-color: rgba(0,0,0,.4);
     position: absolute;
-    z-index: 2;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    z-index: 222;
     display: none;
 }
 #together{
@@ -143,7 +121,6 @@ a{
 }
 /*海报*/
 #haibao{
-    /*background: rgba(0,0,0,.6);*/
     background: url("../img/shengchenghaibao.jpg") no-repeat;
     background-size: cover;
     display: none;
@@ -155,7 +132,6 @@ a{
     bottom: 0;
     left: 0;
     z-index: 222;
-
 }
 .footer_nav img{
     width: 1.4rem;
