--- a/public/web/css/detail.css
+++ b/public/web/css/detail.css
@@ -160,7 +160,7 @@ body{
 .chat_left p span{
     color:#E16D5A;
 }
-.creat_pic{
+.creat_pic,.creat_pics{
     width: 100%;
     height: 40px;
     background:#4DAFEA ;
@@ -170,7 +170,10 @@ body{
  position: absolute;
     bottom: 1px;
 }
-.wx_creat{
+.creat_pics{
+    display: none;
+}
+.wx_creat,.wx_creats{
     width: 50%;
     height: 40px;
     color: #fff;
@@ -181,6 +184,9 @@ body{
     position: absolute;
     bottom: 1px;
     left: 0px;
+}
+.wx_creats{
+    display: none;
 }
 .long_pic{
     background:#2ABA1A;
@@ -359,7 +365,9 @@ body{
 #area_right_box_btn .pic_save,
 .long_pic,
 .creat_pic,
-.wx_creat
+.creat_pics,
+.wx_creat,
+.wx_creats
 {
     cursor: pointer;
 }
