--- a/public/web/css/business.css
+++ b/public/web/css/business.css
@@ -88,7 +88,7 @@ a,a:hover{
 .background_column{
     width:194px ;
     height: 6px;
-    background-color:rgba(225, 176, 90, 1);
+    background-color:rgba(225, 176, 90, .6);
     position: absolute;
     top: 28px;
     z-index: -1;
@@ -133,10 +133,10 @@ a,a:hover{
     position:relative;
 }
 #pruduct_column_title{
-    left: 32%;
+    width: 100%;
     position: absolute;
     text-align: center;
-    font-size: 40px;
+    font-size: 4rem;
     margin: 120px auto 60px;
 }
 #pruduct_column_title span{
@@ -175,7 +175,7 @@ a,a:hover{
     width: 40%;
 }
 .slash img{
-    margin-left: 20%;
+    margin-left: 40%;
     margin-top: 70px;
 }
 .move_people{
@@ -183,7 +183,7 @@ a,a:hover{
     font-family:NotoSansHans-Regular;
     font-size: 20px;
     margin-top: 36px;
-    margin-left: 24%;
+    margin-left: 23%;
 }
 .move_peoples{
     margin-left: 34%;
@@ -206,7 +206,7 @@ a,a:hover{
 }
 .left3{
     left: -24px;
-    width:260px;
+    width:252px;
     z-index: 0;
 }
 .fontSize40{
@@ -215,21 +215,22 @@ a,a:hover{
 }
 /*矩阵排版*/
 #matrix{
-    width: 1100px;
+    width: 100%;
+    height: 100%;
     position: absolute;
-    left: 22%;
     top: 114px;
     z-index: 5;
 }
 #xuxian{
+    width: 39%;
     position: absolute;
     top: 240px;
-    left: 18%;
+    left: 33%;
 }
 #tuikeLOGO{
     position: absolute;
     top: 192px;
-    left: 42%;
+    left: 47%;
 }
 #tuikelM{
     margin-left: 35%;
@@ -250,31 +251,31 @@ a,a:hover{
 }
 .circle_one{
     top:138px;
-    left: 34%;
+    left: 42%;
 }
 .circle_two{
     top:350px ;
-    left: 24%;
+    left: 36.6%;
 }
 .circle_three{
     top:210px ;
-    left: 9.1%;
+    left:27.8%;
 }
 .circle_four{
     top:462px ;
-    left: 46%;
+    left: 49%;
 }
 .circle_five{
     top:194px ;
-    left: 60.8%;
+    left: 57.8%;
 }
 .circle_six{
     top:238px ;
-    left: 84.2%;
+    left: 71.4%;
 }
 .circle_seven{
     top:360px ;
-    left:74%;
+    left:65%;
 }
 .friends_box:hover{
     cursor: pointer;
@@ -375,32 +376,32 @@ a,a:hover{
     z-index: 3;
     display: inline-block;
     width: 100%;
-    left: 10%;
+    left: 28.2%;
     top: 248px;
     font-size: 18px;
 }
 .span2{
     top:390px ;
-    left: 25.5%;
+    left: 37.3%;
 }
 .span3{
-    left: 35.5%;
+    left: 42.8%;
     top: 178px;
 }
 .span4{
-    left: 48.2%;
+    left: 50.2%;
     top: 496px;
 }
 .span5{
-    left: 64%;
+    left: 59.5%;
     top: 232px;
 }
 .span6{
-    left: 76.5%;
+    left: 66.3%;
     top: 390px;
 }
 .span7{
-    left: 86.5%;
+    left: 72.5%;
     top: 278px;
 }
 @keyframes round {
