--- a/public/web/css/detail.css
+++ b/public/web/css/detail.css
@@ -174,7 +174,7 @@ body{
     display: none;
 }
 .wx_creat,.wx_creats{
-    width: 50%;
+    width: 100%;
     height: 40px;
     color: #fff;
     display: inline-block;
@@ -200,7 +200,7 @@ body{
     position: absolute;
     bottom: 1px;
     right: 0px;
-    /*margin-right: -34px;*/
+    display: none;
 }
 /*微信*/
 .wx_pic_box img{
