--- a/public/web/css/index.css
+++ b/public/web/css/index.css
@@ -73,6 +73,9 @@ a,a:hover{
     color:#E1B05A;
     border-bottom: 2px solid #E1B05A;
 }
+.active_index1{
+    color:#E1B05A;
+}
 #nav_pro li:hover{
     cursor: pointer;
 }
@@ -83,15 +86,12 @@ a,a:hover{
     margin-top: 198px;
     position: absolute;
     top: 14px;
-    left: 37%;
     z-index: 44;
     -webkit-animation: fadeInUps .5s 1,fadeInss_text 1s 1;
     -moz-animation: fadeInUps .5s 1,fadeInss_text 1s 1;
     animation:fadeInUps .5s 1,fadeInss_text 1s 1;
 }
-#app_explain img{
-    margin-left: 40px;
-}
+
 /*各栏目文字的显隐效果*/
 @keyframes fadeIns
 {
@@ -113,6 +113,18 @@ a,a:hover{
     50%  {top:34px;}
     100% {top:14px;}
 }
+@keyframes fadeInUps1
+{
+    0%   {top:84px;}
+    50%  {top:54px;}
+    100% {top:44px;}
+}
+@keyframes fadeInUps2
+{
+    0%   {top:374px;}
+    50%  {top:360px;}
+    100% {top:344px;}
+}
 #app_explain .tuike{
     margin-right: 80px;
 }
@@ -121,15 +133,19 @@ a,a:hover{
     margin-top: 30px;
     position: absolute;
     top: 284px;
-    left: 49.5%;
+    -webkit-animation: fadeInUps1 .3s 1,fadeInss_text 1s 1;
+    -moz-animation: fadeInUps1 .3s 1,fadeInss_text 1s 1;
+    animation:fadeInUps1 .3s 1,fadeInss_text 1s 1;
 }
 #invite{
     margin-top: 40px;
     font-size: 26px;
     letter-spacing: 30px;
     position: absolute;
-    left: 42%;
     top: 342px;
+    -webkit-animation: fadeInUps2 .5s 1,fadeInss_text 1s 1;
+    -moz-animation: fadeInUps2 .5s 1,fadeInss_text 1s 1;
+    animation:fadeInUps2 .5s 1,fadeInss_text 1s 1;
 }
 .open_btn{
     width: 150px;
@@ -137,7 +153,7 @@ a,a:hover{
     font-size: 12px;
     position: absolute;
     top: 400px;
-    left: 46.5%;
+    left: 45.5%;
     background-color:rgba(225, 176, 90, 1); ;
     border: 1px solid #E1B05A;
     text-align: center;
@@ -194,7 +210,7 @@ animation: fadeInUp .4s 1,fadeInss_text .4s 1;
 .background_column{
     width:194px ;
     height: 6px;
-    background-color:rgba(225, 176, 90, 1);
+    background-color:rgba(225, 176, 90, .6);
     position: absolute;
     top: 28px;
     z-index: -1;
@@ -218,7 +234,7 @@ animation: fadeInUp .4s 1,fadeInss_text .4s 1;
  .column_single_box{
     display: inline-block;
     /*width: 350px;*/
-     width: 19%;
+     width: 18%;
     height: 466px;
     margin-right: 20px;
     float: left;
@@ -226,11 +242,10 @@ animation: fadeInUp .4s 1,fadeInss_text .4s 1;
 
  }
  .active_hover{
-    background-color: #fff;
+     background-color:rgba(251, 251, 251, 1) ;
     box-shadow: 1px 10px 49px rgba(0, 0, 0, 0.1);
     cursor: pointer;
-     /*transform: translateY(-2px);*/
-     transition:all .6s linear 0s ;
+     transition:all .3s linear 0s ;
 }
 .active_leave{
     filter: progid:DXImageTransform.Microsoft.gradient(GradientType=0, startColorstr=#fff, endColorstr=#FBFBFB);
@@ -298,7 +313,7 @@ animation: fadeInUp .4s 1,fadeInss_text .4s 1;
 .background_column_line{
     z-index:  3;
     left: -7%;
-    width: 294px;
+    width: 280px;
 }
 .left45{
     z-index: 4;
@@ -310,14 +325,14 @@ animation: fadeInUp .4s 1,fadeInss_text .4s 1;
     left: 2%;
 }
 #product_all_box{
-    /*margin-left: 410px;*/
+    width: 100%;
     margin-left:22%;
     position: absolute;
     top: 258px;
     display: none;
 }
 .product_single_box{
-    width: 354px;
+    width: 18%;
     height: 380px;
     background-color: #fff;
     margin-right: 20px;
@@ -342,7 +357,8 @@ animation: fadeInUp .4s 1,fadeInss_text .4s 1;
     color:rgba(187, 187, 187, 1) ;
 }
 #product_all_box img{
-    margin-left: 160px;
+    margin-left: 44%;
+    width: 46%;
 }
 .go_btn{
     width:150px;
@@ -353,7 +369,7 @@ animation: fadeInUp .4s 1,fadeInss_text .4s 1;
     line-height: 40px;
     background:rgba(225, 176, 90, 1);
     border-radius: 2px;
-    margin-left: 100px;
+    margin-left: 18%;
     margin-top: 20px;
 }
 .go_btn:hover{
@@ -384,11 +400,13 @@ animation: fadeInUp .4s 1,fadeInss_text .4s 1;
     left: -16px;
 }
 /*矩阵排版*/
-#matrix{
-    width: 1100px;
+.matrix{
     position: absolute;
-    left: 410px;
+    left: 22%;
     top: 84px;
+}
+.matrix1{
+    left: 12%;
 }
 #none_matrix{
     display: none;
@@ -523,6 +541,7 @@ animation: fadeInUp .4s 1,fadeInss_text .4s 1;
     background: -webkit-linear-gradient(top,rgba(90, 224, 185, .6), rgba(164, 215, 103, .6));
     background: -o-linear-gradient(top,rgba(90, 224, 185, .6), rgba(164, 215, 103, .6));
     background: -moz-linear-gradient(top,rgba(90, 224, 185, .6), rgba(164, 215, 103, .6));
+    background: -ms-linear-gradient(top,rgba(90, 224, 185, .6), rgba(164, 215, 103, .6));
     background: linear-gradient(top,rgba(90, 224, 185, .6), rgba(164, 215, 103, .6));
     display: inline-block;
     position: absolute;
@@ -572,6 +591,7 @@ animation: fadeInUp .4s 1,fadeInss_text .4s 1;
     background: -webkit-linear-gradient(top,rgba(250, 108, 84, .6),rgba(250, 143, 84,  .6));
     background: -o-linear-gradient(top,rgba(250, 108, 84,  .6),rgba(250, 143, 84,  .6));
     background: -moz-linear-gradient(top,rgba(250, 108, 84,  .6),rgba(250, 143, 84,  .6));
+    background: -ms-linear-gradient(top,rgba(250, 108, 84,  .6),rgba(250, 143, 84,  .6));
     background: linear-gradient(top,rgba(250, 108, 84,  .6),rgba(250, 143, 84,  .6));
     filter: progid:DXImageTransform.Microsoft.gradient(GradientType=0, startColorstr=#FA6C54, endColorstr=#FA8F54);
     -webkit-animation: fadeInsss 1s 1;
@@ -607,6 +627,7 @@ animation: fadeInUp .4s 1,fadeInss_text .4s 1;
     background: -webkit-linear-gradient(top,rgba(152, 154, 255, .6),rgba(139, 84, 250,  .6));
     background: -o-linear-gradient(top,rgba(152, 154, 255, .6),rgba(139, 84, 250,  .6));
     background: -moz-linear-gradient(top,rgba(152, 154, 255, .6),rgba(139, 84, 250, .6));
+    background: -ms-linear-gradient(top,rgba(152, 154, 255, .6),rgba(139, 84, 250, .6));
     background: linear-gradient(top,rgba(152, 154, 255, .6),rgba(139, 84, 250, .6));
     filter: progid:DXImageTransform.Microsoft.gradient(GradientType=0, startColorstr=#989AFF, endColorstr=#8B54FA);
     -webkit-animation: fadeInsss 1s 1;
@@ -623,6 +644,7 @@ animation: fadeInUp .4s 1,fadeInss_text .4s 1;
     background: -webkit-linear-gradient(top,rgba(255, 216, 147,  .6),rgba(225, 176, 90,  .6));
     background: -o-linear-gradient(top,rgba(255, 216, 147,  .6),rgba(225, 176, 90,  .6));
     background: -moz-linear-gradient(top,rgba(255, 216, 147,  .6),rgba(225, 176, 90,  .6));
+    background: -ms-linear-gradient(top,rgba(255, 216, 147,  .6),rgba(225, 176, 90,  .6));
     background: linear-gradient(top,rgba(255, 216, 147,  .6),rgba(225, 176, 90, .6));
     filter: progid:DXImageTransform.Microsoft.gradient(GradientType=0, startColorstr=#FFD893, endColorstr=#E1B05A);
     -webkit-animation: fadeInsss 1s 1;
@@ -665,6 +687,7 @@ animation: fadeInUp .4s 1,fadeInss_text .4s 1;
     background: -webkit-linear-gradient(top,rgba(90, 224, 185,1), rgba(164, 215, 103,1));
     background: -o-linear-gradient(top,rgba(90, 224, 185,1), rgba(164, 215, 103,1));
     background: -moz-linear-gradient(top,rgba(90, 224, 185,1), rgba(164, 215, 103,1));
+    background: -ms-linear-gradient(top,rgba(90, 224, 185,1), rgba(164, 215, 103,1));
     background: linear-gradient(top,rgba(90, 224, 185,1), rgba(164, 215, 103,1));
     -webkit-animation: fadeInss .3s 1;
     -moz-animation: fadeInss .3s 1;
@@ -674,6 +697,7 @@ animation: fadeInUp .4s 1,fadeInss_text .4s 1;
     background: -webkit-linear-gradient(top,rgba(250, 108, 84,1),rgba(250, 143, 84,1));
     background: -o-linear-gradient(top,rgba(250, 108, 84,1),rgba(250, 143, 84,1));
     background: -moz-linear-gradient(top,rgba(250, 108, 84,1),rgba(250, 143, 84,1));
+    background: -ms-linear-gradient(top,rgba(250, 108, 84,1),rgba(250, 143, 84,1));
     background: linear-gradient(top,rgba(250, 108, 84,1),rgba(250, 143, 84,1));
     -webkit-animation: fadeInss .3s 1;
     -moz-animation: fadeInss .3s 1;
@@ -683,6 +707,7 @@ animation: fadeInUp .4s 1,fadeInss_text .4s 1;
     background: -webkit-linear-gradient(top,rgba(152, 154, 255, 1),rgba(139, 84, 250,1));
     background: -o-linear-gradient(top,rgba(152, 154, 255, 1),rgba(139, 84, 250,1));
     background: -moz-linear-gradient(top,rgba(152, 154, 255, 1),rgba(139, 84, 250,1));
+    background: -ms-linear-gradient(top,rgba(152, 154, 255, 1),rgba(139, 84, 250,1));
     background: linear-gradient(top,rgba(152, 154, 255, 1),rgba(139, 84, 250,1));
     -webkit-animation: fadeInss .3s 1;
     -moz-animation: fadeInss .3s 1;
@@ -692,6 +717,7 @@ animation: fadeInUp .4s 1,fadeInss_text .4s 1;
     background: -webkit-linear-gradient(top,rgba(255, 216, 147,1),rgba(225, 176, 90, 1));
     background: -o-linear-gradient(top,rgba(255, 216, 147, 1),rgba(225, 176, 90, 1));
     background: -moz-linear-gradient(top,rgba(255, 216, 147, 1),rgba(225, 176, 90, 1));
+    background: -ms-linear-gradient(top,rgba(255, 216, 147, 1),rgba(225, 176, 90, 1));
     background: linear-gradient(top,rgba(255, 216, 147, 1),rgba(225, 176, 90, 1));
     -webkit-animation: fadeInss .3s 1;
     -moz-animation: fadeInss .3s 1;
@@ -724,9 +750,13 @@ animation: fadeInUp .4s 1,fadeInss_text .4s 1;
 #inner{
     display: flex;
     flex-wrap: nowrap;
+    white-space:nowrap;overflow:hidden;
+    zoom:1;
 }
 #content{
     flex-wrap: nowrap;
+    white-space:nowrap;overflow:hidden;
+
 }
 /*产品矩阵的光圈*/
 @keyframes warn {
