修改首页名称及页脚显示

--- a/public/css/web/user/password.css
+++ b/public/css/web/user/password.css
@@ -18,48 +18,61 @@ body .layui-layer-lan .layui-layer-btn .layui-layer-btn1 {
 }
 
 body {
-    width: 1920px;
+    width:100%;
     height: auto;
     font-family: MicrosoftYaHei;
 }
 
 .header {
-    width: 1920px;
+    width:100%;
     height: 200px;
     display: inline;
 }
 
 .content {
-    width: 1920px;
+    width: 100%;
     height: auto;
 }
 
-.step {
-    width: 1920px;
-    height: 201px;
+.header .step {
+    width: 80%;
+    height: 202px;
+    display: block;
 }
 
 .form-action {
-    width: 1920px;
+    width: 100%;
     height: auto;
     position: absolute;
-    left: 755px;
-    top: 401px;
+    left: 24%;
+    top: 400px;
 }
-
+#width_header{
+    width: 100%;
+    display: block;
+    position: relative;
+    left: 13%;
+}
 /*logo图片与header的div里面的样式*/
 .header div {
     display: inline;
 }
 
 .header img {
-    margin-left: 410px;
-    margin-top: 75px;
-}
+    margin-left: 10%;
+    margin-top: 76px;
 
+}
+.header .bigwidth{
+    width: 71%;
+}
+/*.header-nav{*/
+    /*position: absolute;*/
+   /*left: 10%;*/
+/*}*/
 .header-nav-first-span {
     position: absolute;
-    left: 764px;
+    left: 40%;
     top: 87px;
     display: inline;
     width: 140px;
@@ -72,12 +85,12 @@ body {
 
 .header-nav-sec-span {
     position: absolute;
-    left: 1300px;
+    left: 54%;
     top: 98px;
     display: inline;
     width: 180px;
-    height: 19px;
-    line-height: 31px;
+    height: 20px;
+    line-height: 16px;
 }
 
 .header-nav-sec-span a {
