--- a/public/web/css/com.css
+++ b/public/web/css/com.css
@@ -253,6 +253,7 @@ body{
 }
 .container-fluid{
     padding: 0px;
+    /*overflow-x: hidden;*/
 }
 input{outline:none; !important}
 .btn-C{
@@ -494,5 +495,5 @@ button{
     width: 1100px;
     padding-top: 18px;
     padding-bottom: 20px;
-    border-top: 1px solid rgba(238, 238, 238, 1);
+    /*border-top: 1px solid rgba(238, 238, 238, 1);*/
 }
