--- a/public/css/web/user/dlstyle.css
+++ b/public/css/web/user/dlstyle.css
@@ -247,18 +247,17 @@ input#code {
         width: 100%;
         font-size: 24px;
     }
-
 }
 
 @media screen and (min-width: 1025px) {
 
     .login-box, .login-box2 {
-        width: 492px;
-        max-width: 492px;
+        width: 27%;
+        min-width: 492px;
         height: auto;
         position: absolute;
-        margin-top: 79px;
-        margin-left: 880px;
+        margin-top: 80px;
+        margin-left: 63%;
         background:rgba(255, 255, 255, 1);
         opacity: .92;
         /*background: #fff;*/
@@ -271,7 +270,6 @@ input#code {
     }
 
     .login-boxtitle {
-        max-width: 1000px;
         margin: 0px auto;
         height: 160px;
     }
@@ -279,20 +277,23 @@ input#code {
     .login-boxtitle img {
         height: 60px;
         margin-top: 104px;
-        margin-left: -300px
+        margin-left: 4%;
     }
 
     .login-banner, .res-banner {
-        width: 1920px;
+        width: 100%;
         height: 599px;
         background-image: url("/images/web/big.png");
+        background-size: 100% 100%;
+        -moz-background-size: 100% 100%;
+        -webkit-background-size: 100% 100%;
         margin-top: 20px
     }
 
     .login-main, .res-main {
-        max-width: 1000px;
+        /*max-width: 1100px;*/
         height: 470px;
-        margin: 0px auto;
+        /*margin: 0px auto;*/
         position: relative;
     }
 
@@ -393,7 +394,7 @@ input#code {
 
 form input{
     margin-left: 17px;
-    width: 419px;
+    width: 93%;
     border: 1px solid rgba(220, 220, 220, 1);
 }
 /*验证样式*/
